--- a/props-practice/src/index.css
+++ b/props-practice/src/index.css
@@ -19,9 +19,10 @@
 .ip input{
   padding: 8px 20px;
   position: relative;
-  background-color: rgb(52, 52, 248);
+  background-color: rgb(159, 159, 251);
   border: 1px solid rgb(52, 52, 248);
   border:none;
+  text-align:center;
   
 }
 .cart{
