--- a/props-practice/src/forms/forms.css
+++ b/props-practice/src/forms/forms.css
@@ -13,3 +13,19 @@
     margin-left: 20px;
     background-color: rgb(222, 117, 117);
 }
+.show{
+    display: flex;
+    flex-wrap: wrap;
+}
+.each-item{
+    text-align: center;
+    margin: 30px;
+    padding: 30px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px gray;
+}
+.each-item button{
+    padding: 8px;
+    margin-left: 20px;
+}
