--- a/props-practice/src/routerPractice/route.css
+++ b/props-practice/src/routerPractice/route.css
@@ -17,9 +17,11 @@
     
     text-align: center;
     margin: 20px;
-    background-color: rgb(244, 183, 104);
+    background-color:  #f4ed69;
     width:300px;
     height:350px;
+    box-shadow: 1px 1px 10px;
+    border-radius: 20px;
 }
 .eachdata img{
     
@@ -35,16 +37,17 @@
     padding: 8px;
     border: 1px solid burlywood ;
     border-radius: 10px;
-    background-color: rgb(89, 84, 77);
+    background-color: rgb(94, 91, 87);
     margin: 5px;
-    
+    box-shadow: 1px 1px 10px gray;
     color: #fff;
     font-size: 15px;
     
 }
 .eachdata button:hover{
     box-shadow: 1px 1px 10px;
-    background-color:gray 
+    background-color:rgb(242, 136, 136);
+    color: black;
 }
 .cartfood{
     text-align: center;
@@ -67,4 +70,37 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+.order h1{
+    text-align: center;
+    font-size:32px;
+}
+.orderitem{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.ordereachitem{
+    width: 300px;
+    text-align: center;
+    height: 380px;
+    background-color: #f3ec68;
+    margin: 20px;
+    box-shadow: 1px 1px 10px ;
+    border-radius: 20px;
+}
+.ordereachitem button{
+    padding: 8px;
+    margin: 5px;
+}
+.ordereachitem button:hover{
+    background-color: rgb(240, 150, 150);
+}
+.ordereachitem img{
+    width: 300px;
+    height: 200px;
+}
+.ordereachitem span{
+    font-size: 20px;
+    font-size: bold;
 }
